<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/calculatorlogo" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewCalcInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textSize="40sp"
            android:textColor="#E0FF4F"
            android:gravity="end"
            android:text=""/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <ImageButton
                android:id="@+id/button_history"
                style="@style/calc_button_tools"
                android:src="@drawable/baseline_history_24"
                android:text="@string/history"
                android:background="?android:attr/actionBarItemBackground"
                app:layout_constraintStart_toStartOf="@id/button_clear"
                app:layout_constraintEnd_toEndOf="@id/button_clear"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/divider"
                tools:ignore="ContentDescription" />


            <ImageButton
                android:id="@+id/button_unit"
                style="@style/calc_button_tools"
                android:src="@drawable/baseline_square_foot_24"
                app:layout_constraintStart_toEndOf="@id/button_history"
                app:layout_constraintTop_toTopOf="@id/button_history"
                app:layout_constraintBottom_toBottomOf="@id/button_history"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/button_scientific"
                style="@style/calc_button_tools"
                android:src="@drawable/baseline_calculate_24"
                app:layout_constraintStart_toEndOf="@id/button_unit"
                app:layout_constraintTop_toTopOf="@id/button_unit"
                app:layout_constraintBottom_toBottomOf="@id/button_unit"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/button_backspace"
                style="@style/calc_button_tools"
                android:src="@drawable/baseline_backspace_24"
                app:layout_constraintStart_toStartOf="@id/button_divide"
                app:layout_constraintEnd_toEndOf="@id/button_divide"
                app:layout_constraintTop_toTopOf="@id/button_scientific"
                app:layout_constraintBottom_toBottomOf="@id/button_scientific"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="15dp"
                app:layout_constraintTop_toBottomOf="@id/button_history"
                app:layout_constraintStart_toStartOf="parent"/>

            <!-- FIRST ROW -->
            <Button
                android:id="@+id/button_clear"
                style="@style/calc_button_clear"
                android:text="@string/delete"
                android:layout_marginTop="30dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_brace"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintBottom_toTopOf="@id/button_seven" />
            <Button
                android:id="@+id/button_brace"
                style="@style/calc_button_sign"
                android:text="@string/brace"
                android:layout_marginTop="30dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@id/button_clear"
                app:layout_constraintEnd_toStartOf="@id/button_percent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintBottom_toTopOf="@id/button_eight" />
            <Button
                android:id="@+id/button_percent"
                style="@style/calc_button_sign"
                android:text="@string/percent"
                android:layout_marginTop="30dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@id/button_brace"
                app:layout_constraintEnd_toStartOf="@id/button_divide"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintBottom_toTopOf="@id/button_nine"/>
            <Button
                android:id="@+id/button_divide"
                style="@style/calc_button_sign"
                android:text="@string/divide"
                android:layout_marginTop="30dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@id/button_percent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintBottom_toTopOf="@id/button_multiply"/>

            <!-- SECOND ROW -->
            <Button
                android:id="@+id/button_seven"
                style="@style/calc_button_number"
                android:text="@string/seven"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_eight"
                app:layout_constraintTop_toBottomOf="@id/button_clear"
                app:layout_constraintBottom_toTopOf="@id/button_four"/>
            <Button
                android:id="@+id/button_eight"
                style="@style/calc_button_number"
                android:text="@string/eight"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@id/button_seven"
                app:layout_constraintEnd_toStartOf="@id/button_nine"
                app:layout_constraintTop_toBottomOf="@id/button_brace"
                app:layout_constraintBottom_toTopOf="@id/button_five"/>
            <Button
                android:id="@+id/button_nine"
                style="@style/calc_button_number"
                android:text="@string/nine"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@id/button_eight"
                app:layout_constraintEnd_toStartOf="@id/button_multiply"
                app:layout_constraintTop_toBottomOf="@id/button_percent"
                app:layout_constraintBottom_toTopOf="@id/button_six"/>
            <Button
                android:id="@+id/button_multiply"
                style="@style/calc_button_sign"
                android:text="@string/times"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@id/button_nine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_divide"
                app:layout_constraintBottom_toTopOf="@id/button_minus"/>

            <!-- THIRD ROW -->
            <Button
                android:id="@+id/button_four"
                style="@style/calc_button_number"
                android:text="@string/four"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_five"
                app:layout_constraintTop_toBottomOf="@id/button_seven"
                app:layout_constraintBottom_toTopOf="@id/button_one"/>
            <Button
                android:id="@+id/button_five"
                style="@style/calc_button_number"
                android:text="@string/five"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@id/button_four"
                app:layout_constraintEnd_toStartOf="@id/button_six"
                app:layout_constraintTop_toBottomOf="@id/button_eight"
                app:layout_constraintBottom_toTopOf="@id/button_two"/>
            <Button
                android:id="@+id/button_six"
                style="@style/calc_button_number"
                android:text="@string/six"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@id/button_five"
                app:layout_constraintEnd_toStartOf="@id/button_minus"
                app:layout_constraintTop_toBottomOf="@id/button_nine"
                app:layout_constraintBottom_toTopOf="@id/button_three"/>
            <Button
                android:id="@+id/button_minus"
                style="@style/calc_button_sign"
                android:text="@string/minus"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@id/button_six"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_multiply"
                app:layout_constraintBottom_toTopOf="@id/button_plus" />

            <!--FOURTH ROW-->
            <Button
                android:id="@+id/button_one"
                style="@style/calc_button_number"
                android:text="@string/one"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_two"
                app:layout_constraintTop_toBottomOf="@id/button_four"
                app:layout_constraintBottom_toTopOf="@id/button_plusminus"/>
            <Button
                android:id="@+id/button_two"
                style="@style/calc_button_number"
                android:text="@string/two"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@id/button_one"
                app:layout_constraintEnd_toStartOf="@id/button_three"
                app:layout_constraintTop_toBottomOf="@id/button_five"
                app:layout_constraintBottom_toTopOf="@id/button_zero"/>
            <Button
                android:id="@+id/button_three"
                style="@style/calc_button_number"
                android:text="@string/three"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@id/button_two"
                app:layout_constraintEnd_toStartOf="@id/button_plus"
                app:layout_constraintTop_toBottomOf="@id/button_six"
                app:layout_constraintBottom_toTopOf="@id/button_comma"/>
            <Button
                android:id="@+id/button_plus"
                style="@style/calc_button_sign"
                android:text="@string/plus"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@id/button_three"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_minus"
                app:layout_constraintBottom_toTopOf="@id/button_equal"/>

            <!--FIFTH ROW-->
            <Button
                android:id="@+id/button_plusminus"
                style="@style/calc_button_sign"
                android:text="@string/plusminus"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_zero"
                app:layout_constraintTop_toBottomOf="@id/button_one"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <Button
                android:id="@+id/button_zero"
                style="@style/calc_button_number"
                android:text="@string/zero"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@id/button_plusminus"
                app:layout_constraintEnd_toStartOf="@id/button_comma"
                app:layout_constraintTop_toBottomOf="@id/button_two"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <Button
                android:id="@+id/button_comma"
                style="@style/calc_button_sign"
                android:text="@string/comma"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@id/button_zero"
                app:layout_constraintEnd_toStartOf="@id/button_equal"
                app:layout_constraintTop_toBottomOf="@id/button_three"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <Button
                android:id="@+id/button_equal"
                style="@style/calc_button_enter"
                android:text="@string/equal"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@id/button_comma"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_plus"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>